[package]
name = "jati"
version = "0.1.0"
edition = "2021"
authors = ["Jūlija Pečerska <julija.pecerska@zhaw.ch>"]
description = "Joint Alignment and Tree Inference"

rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3
debug = true

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
log = "0.4.19"
ftail = "0.2.0"

phylo = { git = "https://github.com/acg-team/rust-phylo", branch = "develop" }
anyhow = "1.0.86"
ntimestamp = "1.0.0"

[features]
parallel = ["phylo/par-regraft-manual"]