[package]
name = "jati"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/acg-team/JATI"
license = "MIT OR Apache-2.0"
description = "(Joint Alignment) and Tree Inference"
keywords = ["phylogenetics", "computational biology", "maximum likelihood"]
categories = ["science", "science::bioinformatics", "algorithms"]
exclude = [
    ".github/",
    "target/",
]

rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "jati"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "jati-parallel"
path = "src/main.rs"
required-features = ["parallel"]
test = false
bench = false

[build]
rustflags = ["-C", "target-feature=+crt-static"]
target = "x86_64-unknown-linux-gnu"

[profile.release]
opt-level = 3
lto = true
strip = "symbols"

[profile.dev]
opt-level = 3
debug = true

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
log = "0.4.19"
ftail = "0.2.0"
phylo = { git = "https://github.com/acg-team/rust-phylo", tag = "v0.1.0-alpha", version = "0.1.0-alpha", features = ["par-regraft-manual"] }
anyhow = "1.0.86"
ntimestamp = "1.0.0"

[features]
parallel = ["phylo/par-regraft-manual"]